--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,6 +1,8 @@
-<h1>注文履歴一覧</h1>
+<div class="col-md-5 offset-md-3">
+  <h1>注文履歴一覧</h1>
+</div>
 
-<table>
+<table class="col-md-3 offset-md-4">
   <thead>
     <tr>
       <th>購入日時</th>
