--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,6 +1,8 @@
-<h1>会員一覧</h1>
+<div class="col-md-8 offset-md-3">
+  <h1>会員一覧</h1>
+</div>
 
-<table>
+<table class="col-md-3 offset-md-4">
   <thead>
     <tr>
       <th>会員ID</th>
