--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -9,19 +9,29 @@
   </div>
 <% end %>
 
-<h1>ジャンル一覧・追加</h1>
+<div class="col-md-8 offset-md-3">
+  <h1>ジャンル一覧・追加</h1>
+</div>
 
 <%= form_with model: @genre, url: admin_genres_path, method: :post do |f| %>
-  <div class="form-group">
-    <%= f.label :ジャンル名 %>
-    <%= f.text_area :name, class: "form-control", required: true %>
-
-    <%= f.submit "新規登録", class: "btn btn-success" %>
-  </div>
-
+  <table class="col-md-3 offset-md-3">
+    <tr>
+      <td>
+        <%= f.label :ジャンル名 %>
+      </td>
+      <td>
+        <%= f.text_field :name, class: "form-control", required: true %>
+      </td>
+      <td>
+        <%= f.submit "新規登録", class: "btn btn-success" %>
+      </td>
+    </tr>
+  </table>
 <% end %>
 
-<table>
+<br>
+
+<table class="col-md-3 offset-md-3">
   <thead>
     <tr>
       <th>ジャンル</th>
