--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -9,10 +9,12 @@
   </div>
 <% end %>
 
-<h1>商品編集</h1>
+<div class="col-md-8 offset-md-3">
+  <h1>商品編集</h1>
+</div>
 
 <%= form_with model: @item, url: admin_item_path, method: :patch do |f| %>
-  <table>
+  <table class="col-md-3 offset-md-4">
 
     <tr>
       <td>商品画像</td>
@@ -55,7 +57,7 @@
 
   </table>
 
-  <div class="form-group">
+  <div class="col-md-3 offset-md-7">
     <%= f.submit "変更を保存", class: "btn btn-success" %>
   </div>
 
