--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,8 +1,12 @@
-<h1>商品一覧</h1>
+<div class="col-md-5 offset-md-3">
+  <h1>商品一覧</h1>
+</div>
 
-<%= link_to "+", new_admin_item_path, method: :get, class: 'btn btn-sm btn-success' %>
+<div class="col-md-5 offset-md-7">
+  <%= link_to "+", new_admin_item_path, method: :get, class: 'btn btn-sm btn-dark' %>
+</div>
 
-<table>
+<table class="col-md-3 offset-md-4">
   <thead>
     <tr>
       <th>商品ID</th>
