--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -9,56 +9,56 @@
   </div>
 <% end %>
 
-<h1>商品新規登録</h1>
+<div class="col-md-8 offset-md-3">
+  <h1>商品新規登録</h1>
+</div>
 
 <%= form_with model: @item, url: admin_items_path, method: :post do |f| %>
 
-  <div class="form-group">
-    <div class="field">
-      <%= f.label :商品画像 %>
-      <%= f.file_field :image, accept: "image/*" %>
-    </div>
-  </div>
+    <table class="col-md-3 offset-md-4">
 
-  <div class="form-group">
-    <div class="field">
-      <%= f.label :商品名 %>
-      <%= f.text_field :name, required: true, class: "form-control book_body" %>
-    </div>
-  </div>
+    <tr>
+      <td>商品画像</td>
+      <td><%= f.file_field :image, accept: "image/*" %></td>
+    </tr>
 
-  <div class="form-group">
-    <div class="field">
-      <%= f.label :商品説明 %>
-      <%= f.text_area :introduction, required: true, class: "form-control book_body" %>
-    </div>
-  </div>
+    <tr>
+      <td>商品名</td>
+      <td><%= f.text_field :name, required: true, class: "form-control book_body" %></td>
+    </tr>
 
-  <div class="form-group">
-    <div class="field">
-      <%= f.label :ジャンル %>
-      <%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "--選択して下さい--", required: true %>
-    </div>
-  </div>
+    <tr>
+      <td>商品説明</td>
+      <td><%= f.text_area :introduction, required: true, class: "form-control book_body" %></td>
+    </tr>
 
-  <div class="form-group">
-    <div class="field">
-      <%= f.label :税抜価格 %>
-      <%= f.text_field :price, required: true, class: "form-control book_body" %>円
-    </div>
-  </div>
+    <tr>
+      <td>ジャンル</td>
+      <td><%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "--選択して下さい--" %></td>
+    </tr>
 
-  <div class="form-group">
-    <div class="field">
-      <%= f.label :販売ステータス %>
-      <%= f.radio_button :is_active, :true, checked: true %>
-      <%= f.label :is_active, "販売中", {value: :true, style: "display: inline-block;"} %>
-      <%= f.radio_button :is_active, :false %>
-      <%= f.label :is_active, "販売停止中", {value: :false, style: "display: inline-block;"} %>
-    </div>
-  </div>
+    <tr>
+      <td>税抜価格</td>
+      <td><%= f.text_field :price, required: true, class: "form-control book_body" %></td>
+    </tr>
 
-  <div class="form-group">
+    <tr>
+      <td>販売ステータス</td>
+      <td>
+        <div class="form-group">
+          <div class="field">
+            <%= f.radio_button :is_active, :true, checked: true %>
+            <%= f.label :is_active, "販売中", {value: :true, style: "display: inline-block;"} %>
+            <%= f.radio_button :is_active, :false %>
+            <%= f.label :is_active, "販売停止中", {value: :false, style: "display: inline-block;"} %>
+          </div>
+        </div>
+      </td>
+    </tr>
+
+  </table>
+
+  <div class="col-md-3 offset-md-7">
     <%= f.submit "新規登録", class: "btn btn-success" %>
   </div>
 
