--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,8 +1,10 @@
-<h1>配送先編集</h1>
+<div class="col-md-5 offset-md-3">
+  <h1>配送先編集</h1>
+</div>
 
 <%= form_with model: @address, url: public_address_path, method: :patch do |f| %>
 
-  <table>
+  <table class="col-md-3 offset-md-4">
     <tr>
       <td>
         <%= f.label :postal_code, "郵便番号（ハイフンなし）" %>
@@ -29,7 +31,7 @@
     </tr>
   </table>
 
-  <div class="actions">
-    <%= f.submit "変更内容を保存" %>
+  <div class="col-md-3 offset-md-7">
+    <%= f.submit "変更内容を保存", class: 'btn btn-sm btn-success' %>
   </div>
 <% end %>
