--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -8,76 +8,79 @@
     </ul>
   </div>
 <% end %>
+<div class="col-md-5 offset-md-3">
+  <h1>配送先登録/一覧</h1>
+</div>
 
-<h1>配送先登録/一覧</h1>
-
+<div class="col-md-5 offset-md-3">
 <%= form_with model: @address, url: public_addresses_path, method: :post do |f| %>
 
-  <table>
-    <tr>
-      <td>
-        <%= f.label :postal_code, "郵便番号（ハイフンなし）" %>
-      </td>
-      <td>
-        <%= f.text_field :postal_code, required: true, class: "form-control book_body" %>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <%= f.label :address, "住所" %>
-      </td>
-      <td>
-        <%= f.text_area :address, required: true, class: "form-control book_body" %>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <%= f.label :name, "宛名" %>
-      </td>
-      <td>
-        <%= f.text_field :name, required: true, class: "form-control book_body" %>
-      </td>
-    </tr>
-  </table>
-
-  <div class="actions">
-    <%= f.submit "新規登録" %>
-  </div>
-<% end %>
-
-<table>
-  <thead>
-    <tr>
-      <th>郵便番号</th>
-      <th>住所</th>
-      <th>宛名</th>
-      <th colspan=3></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @addresses.each do |address| %>
+    <table class="col-md-7 offset-md-2">
       <tr>
-
         <td>
-          <%= address.postal_code %>
+          <%= f.label :postal_code, "郵便番号（ハイフンなし）" %>
         </td>
-
         <td>
-          <%= address.address %>
+          <%= f.text_field :postal_code, required: true, class: "form-control book_body" %>
         </td>
-
-        <td>
-          <%= address.name %>
-        </td>
-
-        <td>
-          <%= link_to "編集する", edit_public_address_path(address.id), method: :get, class: 'btn btn-sm btn-success' %>
-          <%= link_to "削除する", public_address_path(address.id), method: :delete, class: 'btn btn-sm btn-success' %>
-        </td>
-
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tr>
+        <td>
+          <%= f.label :address, "住所" %>
+        </td>
+        <td>
+          <%= f.text_area :address, required: true, class: "form-control book_body" %>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <%= f.label :name, "宛名" %>
+        </td>
+        <td>
+          <%= f.text_field :name, required: true, class: "form-control book_body" %>
+        </td>
+      </tr>
+    </table>
+    
 
+    <div class="col-md-5 offset-md-9">
+      <%= f.submit "新規登録", class: 'btn btn-sm btn-success' %>
+    </div>
+  <% end %>
+
+  <table class="col-md-9 offset-md-2">
+    <thead>
+      <tr>
+        <th>郵便番号</th>
+        <th>住所</th>
+        <th>宛名</th>
+        <th colspan=3></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @addresses.each do |address| %>
+        <tr>
+
+          <td>
+            <%= address.postal_code %>
+          </td>
+
+          <td>
+            <%= address.address %>
+          </td>
+
+          <td>
+            <%= address.name %>
+          </td>
+
+          <td>
+            <%= link_to "編集する", edit_public_address_path(address.id), method: :get, class: 'btn btn-sm btn-success' %>
+            <%= link_to "削除する", public_address_path(address.id), method: :delete, class: 'btn btn-sm btn-danger' %>
+          </td>
+
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
