--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,65 +1,76 @@
-<h1>ショッピングカート</h1>
+<div class="col-md-5 offset-md-3">
+  <h1>ショッピングカート</h1>
+</div>
 
-<%= link_to "カートを空にする", destroy_all_public_cart_items_path, method: :delete, class: 'btn btn-sm btn-success' %>
 
-<table>
-  <thead>
-    <tr>
-      <th>商品名</th>
-      <th>単価(税込)</th>
-      <th>数量</th>
-      <th>小計</th>
-      <th colspan=3></th>
-    </tr>
-  </thead>
+<div class="col-md-8 offset-md-7">
+  <%= link_to "カートを空にする", destroy_all_public_cart_items_path, method: :delete, class: 'btn btn-sm btn-danger' %>
+</div>
 
-  <tbody>
-    <% @cart_items.each do |cart_item| %>
+  <div class="col-md-8 offset-md-4">
+  <table>
+    <thead>
       <tr>
-
-        <td>
-          <%= cart_item.item.name %>
-        </td>
-
-        <td>
-          <%= cart_item.item.with_tax_price %>
-        </td>
-
-        <%= form_with model: cart_item, url: public_cart_item_path(cart_item.id), method: :patch do |f| %>
-        <td>
-          <%= f.select :amount, *[1..10] %>
-          <%= f.submit "変更", class: "btn btn-success" %>
-        </td>
-        <% end %>
-
-        <td>
-          <%= cart_item.subtotal %>
-        </td>
-
-        <td>
-          <%= link_to "削除する", public_cart_item_path(cart_item.id), method: :delete, class: 'btn btn-sm btn-success' %>
-        </td>
-
-        <% @total +=  cart_item.subtotal %>
-
+        <th>商品名</th>
+        <th>単価(税込)</th>
+        <th>数量</th>
+        <th>小計</th>
+        <th colspan=3></th>
       </tr>
-    <% end %>
+    </thead>
 
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+    <tbody>
+      <% @cart_items.each do |cart_item| %>
+        <tr>
 
-      <td>
-        合計金額
-      </td>
-      <td>
-        <%= @total %>
-      </td>
-    </tr>
+          <td>
+            <%= cart_item.item.name %>
+          </td>
 
-  </tbody>
-</table>
+          <td>
+            <%= cart_item.item.with_tax_price %>
+          </td>
 
-<%= link_to "買い物を続ける", public_items_path, method: :get, class: 'btn btn-sm btn-success' %>
-<%= link_to "情報入力に進む", new_public_order_path, method: :get, class: 'btn btn-sm btn-success' %>
+          <%= form_with model: cart_item, url: public_cart_item_path(cart_item.id), method: :patch do |f| %>
+          <td>
+            <%= f.select :amount, *[1..10] %>
+            <%= f.submit "変更", class: "btn btn-success" %>
+          </td>
+          <% end %>
+
+          <td>
+            <%= cart_item.subtotal %>
+          </td>
+
+          <td>
+            <%= link_to "削除する", public_cart_item_path(cart_item.id), method: :delete, class: 'btn btn-sm btn-danger' %>
+          </td>
+
+          <% @total +=  cart_item.subtotal %>
+
+        </tr>
+      <% end %>
+
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+
+        <td>
+          <strong>合計金額</strong>
+        </td>
+        <td>
+          <%= @total %>
+        </td>
+      </tr>
+
+    </tbody>
+  </table>
+</div>
+
+<div class="col-md-3 offset-md-7">
+  <%= link_to "買い物を続ける", public_root_path, method: :get, class: 'btn btn-sm btn-primary' %>
+  <% if current_customer.cart_items.present? %>
+    <%= link_to "情報入力に進む", new_public_order_path, method: :get, class: 'btn btn-sm btn-success' %>
+  <% end %>
+</div>
