--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -1,10 +1,15 @@
-<p>
-  <strong>本当に退会しますか？</strong><br>
-
-  退会すると、会員情報や<br>
-  これまでの購入履歴が閲覧できなくなります。<br>
-  退会する場合は、「退会する」をクリックしてください。<br>
-</p>
-
-<%= link_to "退会しない", edit_public_customer_path(current_customer.id), method: :get, class: 'btn btn-sm btn-success' %>
-<%= link_to "退会する", withdrawal_public_customers_path, method: :patch, "data-confirm" => "本当に退会しますか？", class: 'btn btn-sm btn-success' %>
+<div class="col-md-8 offset-md-4">
+  <p>
+    <strong>本当に退会しますか？</strong><br>
+  
+    退会すると、会員情報や<br>
+    これまでの購入履歴が閲覧できなくなります。<br>
+    退会する場合は、「退会する」をクリックしてください。<br>
+  </p>
+  
+  <div class="col-md-4 offset-md-2">
+    <%= link_to "退会しない", edit_public_customer_path(current_customer.id), method: :get, class: 'btn btn-sm btn-primary' %>
+    <%= link_to "退会する", withdrawal_public_customers_path, method: :patch, "data-confirm" => "本当に退会しますか？", class: 'btn btn-sm btn-danger' %>
+  </div>
+  
+</div>
