--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,5 +1,8 @@
-<h1>会員情報編集</h1>
+<div class="col-md-5 offset-md-2">
+  <h1>会員情報編集</h1>
+</div>
 
+<div class="col-md-10 offset-md-2">
 <%= form_with model: @customer, url: public_customer_path(current_customer.id), method: :patch do |f| %>
 
   <table>
@@ -58,10 +61,11 @@
       </td>
     </tr>
   </table>
+</div>  
 
-  <div class="actions">
-    <%= f.submit "編集内容を保存" %>
-    <%= link_to "退会する", confirm_public_customers_path, method: :get, class: 'btn btn-sm btn-success' %>
-  </div>
+<div class="col-md-10 offset-md-6">
+  <%= f.submit "編集内容を保存", class: 'btn btn-sm btn-success' %>
+  <%= link_to "退会する", confirm_public_customers_path, method: :get, class: 'btn btn-sm btn-danger' %>
+</div>
 
 <% end %>
