--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,5 +1,5 @@
-<h1>About</h1>
-<p>
+<h1 class="col-md-8 offset-md-4">About</h1>
+<p class="col-md-8 offset-md-4">
   ながのCAKEは全国発送可能なケーキ屋さんです。<br>
   お子様からお年寄りの方までお召し上がりいただけるよう、<br>
   様々なバリエーションをご用意しております。<br>
