--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="col-md-8 offset-md-4">
   <p>
     ようこそ、ながのCAKEへ！<br>
     このサイトは、ケーキ販売のECサイトになります。<br>
@@ -7,25 +7,28 @@
   </p>
 </div>
 
-<h1>新着商品</h1>
+<div class="col-md-10 offset-md-2">
+  <h1>新着商品</h1>
 
-<table>
-  <% @items.each do |item| %>
-    <td>
-      <div>
-        <%= image_tag item.get_image(200,200) %>
-      </div>
-      <div>
-        <%= link_to public_item_path(item.id) do %>
-          <%= item.name %>
-        <% end %>
-      </div>
-      <div>
-        ¥<%= item.price %>
-      </div>
-    </td>
-  <% end %>
-</table>
+  <table>
+    <% @items.each do |item| %>
+      <td>
+        <div>
+          <%= image_tag item.get_image(300,225) %>
+        </div>
+        <div>
+          <% if customer_signed_in? %>
+            <%= link_to public_item_path(item.id) do %>
+              <%= item.name %>
+            <% end %>
+          <% end %>
+        </div>
+        <div>
+          ¥<%= item.price %>
+        </div>
+      </td>
+    <% end %>
+  </table>
+</div>
 
-<%= link_to "全ての商品を見る>", public_items_path, method: :get, class: 'btn btn-sm btn-success' %>
-
+<%= link_to "全ての商品を見る>", public_items_path, method: :get, class: 'col-md-3 offset-md-9' %>
