--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,17 +1,23 @@
-<h1><%= @item.name %></h1>
-
+<div class="col-md-10 offset-md-4">
+  <h1><%= @item.name %></h1>
+</div>
+  
+<div class="col-md-8 offset-md-5">
 <%= image_tag @item.get_image(200,200) %>
 
 <p><%= @item.introduction %></p>
 
 <p>¥<%= @item.price %>(税込)</p>
 
-<%= form_with model: @cart_item, url: public_cart_items_path, method: :post do |f| %>
-
-  <%= f.hidden_field  :item_id, :value => @item.id %>
-  <%= f.hidden_field  :customer_id, :value => current_customer.id %>
-
-  <%= f.select :amount, *[1..10], include_blank: "--個数選択--" %>
-
-  <%= f.submit "カートに入れる", class: "btn btn-success" %>
+<% if customer_signed_in? %>
+  <%= form_with model: @cart_item, url: public_cart_items_path, method: :post do |f| %>
+  
+    <%= f.hidden_field  :item_id, :value => @item.id %>
+    <%= f.hidden_field  :customer_id, :value => current_customer.id %>
+  
+    <%= f.select :amount, *[1..10], include_blank: "--個数選択--" %>
+  
+    <%= f.submit "カートに入れる", class: "btn btn-success" %>
+  <% end %>
 <% end %>
+</div>
