--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,6 +1,8 @@
-<h1>注文履歴一覧</h1>
+<div class="col-md-5 offset-md-3">
+  <h1>注文履歴一覧</h1>
+</div>
 
-<table>
+<table class="col-md-6 offset-md-3">
   <thead>
     <tr>
       <th>注文日</th>
@@ -41,7 +43,7 @@
         </td>
 
         <td>
-          <%= link_to "表示する", public_order_path(order.id), method: :get, class: 'btn btn-sm btn-success' %>
+          <%= link_to "表示する", public_order_path(order.id), method: :get, class: 'btn btn-sm btn-primary' %>
         </td>
 
       </tr>
