--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -9,67 +9,71 @@
   </div>
 <% end %>
 
-<h1>注文情報入力</h1>
+<div class="col-md-5 offset-md-3">
+  <h1>注文情報入力</h1>
+</div>
 
-<%= form_with model: @order, url: confirm_public_orders_path, method: :get do |f| %>
-
-  <div class="form-group">
-    <div class="field">
-      <%= f.label :支払方法 %><br>
-      <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
-      <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card], {value: :true, style: "display: inline-block;"} %><br>
-      <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
-      <%= f.label :payment_method, Order.payment_methods_i18n[:transfer], {value: :false, style: "display: inline-block;"} %>
+<div class="col-md-8 offset-md-3">
+  <%= form_with model: @order, url: confirm_public_orders_path, method: :get do |f| %>
+  
+    <div class="form-group">
+      <div class="field">
+        <strong>支払方法</strong><br>
+        <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
+        <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card], {value: :true, style: "display: inline-block;"} %><br>
+        <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+        <%= f.label :payment_method, Order.payment_methods_i18n[:transfer], {value: :false, style: "display: inline-block;"} %>
+      </div>
     </div>
-  </div>
-
-  <div class="form-group">
-    <div class="field">
-      <%= f.label :お届け先 %><br>
-
-        <%= f.radio_button :select_address, 1 %>
-          <%= f.label :select_address, "ご自身の住所" %><br>
-          〒<%= current_customer.postal_code %> <%= current_customer.address %><br>
-
-        <%= f.radio_button :select_address, 2 %>
-          <%= f.label :select_address, "登録済住所から選択" %><br>
-          <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display), include_blank: "--選択して下さい--" %><br>
-
-        <%= f.radio_button :select_address, 3 %>
-          <%= f.label :select_address, "新しいお届け先" %><br>
-          <table>
-            <tr>
-              <td>
-                郵便番号(ハイフンなし)
-              </td>
-              <td>
-                <%= f.text_field :delivery_postal_code, class: "form-control book_body" %><br>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                住所
-              </td>
-              <td>
-                <%= f.text_field :delivery_address, class: "form-control book_body" %><br>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                宛名
-              </td>
-              <td>
-                <%= f.text_field :delivery_name, class: "form-control book_body" %><br>
-              </td>
-            </tr>
-          </table>
-
-
+  
+    <div class="form-group">
+      <div class="field">
+        <strong>お届け先</strong><br>
+  
+          <%= f.radio_button :select_address, 1 %>
+            <%= f.label :select_address, "ご自身の住所" %>
+            〒<%= current_customer.postal_code %> <%= current_customer.address %> <%= current_customer.last_name %><%= current_customer.first_name %><br>
+  
+          <%= f.radio_button :select_address, 2 %>
+            <%= f.label :select_address, "登録済住所から選択" %>
+            <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display), include_blank: "--選択して下さい--" %><br>
+  
+          <%= f.radio_button :select_address, 3 %>
+            <%= f.label :select_address, "新しいお届け先" %><br>
+            <table>
+              <tr>
+                <td>
+                  郵便番号(ハイフンなし)
+                </td>
+                <td>
+                  <%= f.text_field :delivery_postal_code, class: "form-control book_body" %><br>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  住所
+                </td>
+                <td>
+                  <%= f.text_area :delivery_address, class: "form-control book_body" %><br>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  宛名
+                </td>
+                <td>
+                  <%= f.text_field :delivery_name, class: "form-control book_body" %><br>
+                </td>
+              </tr>
+            </table>
+  
+  
+      </div>
     </div>
-  </div>
-
-  <div class="form-group">
-    <%= f.submit "確認画面へ進む", class: "btn btn-success" %>
-  </div>
-
-<% end %>
+  
+    <div class="form-group">
+      <%= f.submit "確認画面へ進む", class: "btn btn-success" %>
+    </div>
+  
+  <% end %>
+</div>
