--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,104 +1,106 @@
-<h1>注文履歴詳細</h1>
-
-<strong>注文情報</strong>
-<table>
-  <tr>
-    <td>
-      注文日
-    </td>
-    <td>
-      <%= @order.created_at.to_s(:date_jp) %>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      配送先
-    </td>
-    <td>
-      〒<%= @order.delivery_postal_code %><br>
-          <%= @order.delivery_address %><br>
-          <%= @order.delivery_name %>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      支払方法
-    </td>
-    <td>
-      <%= @order.payment_method_i18n %>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      ステータス
-    </td>
-    <td>
-      <%= @order.order_status_i18n %>
-    </td>
-  </tr>
-</table>
-
-<strong>請求情報</strong>
-<table>
-  <tr>
-    <td>
-      商品合計
-    </td>
-    <td>
-      <%= @total %>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      配送料
-    </td>
-    <td>
-      <%= @order.postage %>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      ご請求額
-    </td>
-    <td>
-      <%= @order.billing_amount %>
-    </td>
-  </tr>
-</table>
-
-
-<strong>注文内容</strong>
-<table>
-  <thead>
+<div class="col-md-5 offset-md-3">
+  <h1>注文履歴詳細</h1>
+  
+  <strong>注文情報</strong>
+  <table class="col-md-6 offset-md-1" >
     <tr>
-      <th>商品</th>
-      <th>単価（税込）</th>
-      <th>個数</th>
-      <th>小計</th>
+      <td>
+        注文日
+      </td>
+      <td>
+        <%= @order.created_at.to_s(:date_jp) %>
+      </td>
     </tr>
-  </thead>
-
-  <tbody>
-    <% @order.order_details.each do |order_detail| %>
+    <tr>
+      <td>
+        配送先
+      </td>
+      <td>
+        〒<%= @order.delivery_postal_code %><br>
+            <%= @order.delivery_address %><br>
+            <%= @order.delivery_name %>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        支払方法
+      </td>
+      <td>
+        <%= @order.payment_method_i18n %>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        ステータス
+      </td>
+      <td>
+        <%= @order.order_status_i18n %>
+      </td>
+    </tr>
+  </table>
+  
+  <strong>請求情報</strong>
+  <table class="col-md-2 offset-md-1" >
+    <tr>
+      <td>
+        商品合計
+      </td>
+      <td>
+        <%= @total %>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        配送料
+      </td>
+      <td>
+        <%= @order.postage %>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        ご請求額
+      </td>
+      <td>
+        <%= @order.billing_amount %>
+      </td>
+    </tr>
+  </table>
+  
+  
+  <strong>注文内容</strong>
+  <table class="col-md-5 offset-md-1" >
+    <thead>
       <tr>
-
-        <td>
-          <%= Item.find(order_detail.item_id).name %>
-        </td>
-
-        <td>
-          <%= order_detail.order_price %>
-        </td>
-
-        <td>
-          <%= order_detail.amount %>
-        </td>
-
-        <td>
-          <%= order_detail.order_price * order_detail.amount %>
-        </td>
-
+        <th>商品</th>
+        <th>単価（税込）</th>
+        <th>個数</th>
+        <th>小計</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+  
+    <tbody>
+      <% @order.order_details.each do |order_detail| %>
+        <tr>
+  
+          <td>
+            <%= Item.find(order_detail.item_id).name %>
+          </td>
+  
+          <td>
+            <%= order_detail.order_price %>
+          </td>
+  
+          <td>
+            <%= order_detail.amount %>
+          </td>
+  
+          <td>
+            <%= order_detail.order_price * order_detail.amount %>
+          </td>
+  
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
